Create navbar and grid container for flower display. Add styling and layout.

--- a/index.html
+++ b/index.html
@@ -15,7 +15,41 @@
     <body>
         <header>
             <p class="logo">Rose Buds</p>
+            <nav>
+                <ul>
+                    <li><a href="#">Home</a></li>
+                    <li><a href="#">Flowers</a></li>
+                    <li><a href="#">About Us</a></li>
+                    <li><a href="#">Contact Me</a></li>
+                </ul>
+            </nav>
         </header>
-        <h1>Rose Buds TEST</h1>
+        <main>
+            <section class="flowers-container">
+                    <div class="flower1 flower">flower 1</div>
+                    <div class="flower2 flower">flower 2</div>
+                    <div class="flower3 flower">flower 3</div>
+                    <div class="flower4 flower">flower 4</div>
+                    <div class="flower5 flower">flower 5</div>
+                    <div class="flower6 flower">flower 6</div>
+                    <div class="flower7 flower">flower 7</div>
+                    <div class="flower8 flower">flower 8</div>
+                    <div class="flower9 flower">flower 9</div>
+                    <div class="flower10 flower">flower 10</div>
+                    <div class="flower11 flower">flower 11</div>
+                    <div class="flower12 flower">flower 12</div>
+            </section>
+        </main>
     </body>
 </html>
+
+
+
+
+
+
+
+
+
+
+
