Continue building on the grid items and updated UI. Met with client (Girlfriend lol) and we discussed more updates for future pushes

--- a/index.html
+++ b/index.html
@@ -19,25 +19,73 @@
                 <ul>
                     <li><a href="#">Home</a></li>
                     <li><a href="#">Flowers</a></li>
-                    <li><a href="#">About Us</a></li>
+                    <li><a href="aboutme.html" target="_blank">About Us</a></li>
                     <li><a href="#">Contact Me</a></li>
                 </ul>
             </nav>
         </header>
         <main>
             <section class="flowers-container">
-                    <div class="flower1 flower">flower 1</div>
-                    <div class="flower2 flower">flower 2</div>
-                    <div class="flower3 flower">flower 3</div>
-                    <div class="flower4 flower">flower 4</div>
-                    <div class="flower5 flower">flower 5</div>
-                    <div class="flower6 flower">flower 6</div>
-                    <div class="flower7 flower">flower 7</div>
-                    <div class="flower8 flower">flower 8</div>
-                    <div class="flower9 flower">flower 9</div>
-                    <div class="flower10 flower">flower 10</div>
-                    <div class="flower11 flower">flower 11</div>
-                    <div class="flower12 flower">flower 12</div>
+
+                    <div class="flower1 flower">
+                        <p>flower 1</p>
+                        <img src="flowers/flower1.webp" alt="Image of a flower" class="image"/>
+                    </div>
+
+                    <div class="flower2 flower">
+                        <p>flower 2</p>
+                        <img src="flowers/flower2.jpg" alt="Image of a flower" class="image"/>
+                    </div>
+
+                    <div class="flower3 flower">
+                        <p>flower 3</p>
+                        <img src="flowers/flower3.jpg" alt="Image of a flower" class="image"/>
+                    </div>
+
+                    <div class="flower4 flower">
+                        <p>flower 4</p>
+                        <img src="flowers/flower4.webp" alt="Image of a flower" class="image"/>
+                    </div>
+
+                    <div class="flower5 flower">
+                        <p>flower 5</p>
+                        <img src="flowers/flower5.jpg" alt="Image of a flower" class="image"/>
+                    </div>
+
+                    <div class="flower6 flower">
+                        <p>flower 6</p>
+                        <img src="flowers/flower6.webp" alt="Image of a flower" class="image"/>
+                    </div>
+
+                    <div class="flower7 flower">
+                        <p>flower 7</p>
+                        <img src="flowers/flower7.webp" alt="Image of a flower" class="image"/>
+                    </div>
+
+                    <div class="flower8 flower">
+                        <p>flower 8</p>
+                        <img src="flowers/flower8.jpeg" alt="Image of a flower" class="image"/>
+                    </div>
+
+                    <div class="flower9 flower">
+                        <p>flower 9</p>
+                        <img src="flowers/flower9.jpeg" alt="Image of a flower" class="image"/>
+                    </div>
+
+                    <div class="flower10 flower">
+                        <p>flower 10</p>
+                        <img src="flowers/flower10.jpg" alt="Image of a flower" class="image"/>
+                    </div>
+
+                    <div class="flower11 flower">
+                        <p>flower 11</p>
+                        <img src="flowers/flower11.jpeg" alt="Image of a flower" class="image"/>
+                    </div>
+
+                    <div class="flower12 flower">
+                        <p>flower 12</p>
+                        <img src="flowers/flower12.jpeg" alt="Image of a flower" class="image"/>
+                    </div>
             </section>
         </main>
     </body>
