--- a/index.html
+++ b/index.html
@@ -19,72 +19,114 @@
                 <ul>
                     <li><a href="#">Home</a></li>
                     <li><a href="#">Flowers</a></li>
-                    <li><a href="aboutme.html" target="_blank">About Us</a></li>
+                    <li><a href="aboutme.html">About Us</a></li>
                     <li><a href="#">Contact Me</a></li>
                 </ul>
             </nav>
         </header>
         <main>
+            <section class="landing">
+                <img src="landingpage.webp" class="landingpage" />
+                <p class="slogan"><span class="brand">Rose Buds</span> takes pride in having the freshest flowers on the market. Weddings, anniversaries, birthdays, for any event <span class="all">WE DO IT ALL!</span></p>            
+            </section>
+
+
             <section class="flowers-container">
 
                     <div class="flower1 flower">
-                        <p>flower 1</p>
+                        <p class="title">flower 1</p>
                         <img src="flowers/flower1.webp" alt="Image of a flower" class="image"/>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur, ratione amet adipisci nihil nemo fuga?</p>
+                        <p>$24.99</p>
+                        <button class="button">Add to cart</button>
                     </div>
 
                     <div class="flower2 flower">
-                        <p>flower 2</p>
+                        <p class="title">flower 2</p>
                         <img src="flowers/flower2.jpg" alt="Image of a flower" class="image"/>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos molestiae nemo aperiam, repudiandae, labore eius iure quaerat aliquid laudantium, ab voluptatibus laboriosam.</p>
+                        <p>$24.99</p>
+                        <button class="button">Add to cart</button>
                     </div>
-
+                    
                     <div class="flower3 flower">
-                        <p>flower 3</p>
+                        <p class="title">flower 3</p>
                         <img src="flowers/flower3.jpg" alt="Image of a flower" class="image"/>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora, distinctio? Perspiciatis a recusandae eligendi fugiat doloremque incidunt veritatis laudantium ea.</p>
+                        <p>$34.99</p>
+                        <button class="button">Add to cart</button>
                     </div>
 
                     <div class="flower4 flower">
-                        <p>flower 4</p>
+                        <p class="title">flower 4</p>
                         <img src="flowers/flower4.webp" alt="Image of a flower" class="image"/>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum sit recusandae error?</p>
+                        <p>$29.99</p>
+                        <button class="button">Add to cart</button>
                     </div>
-
+                    <!--TODO: Flower 3 and 5 are the same change -->
                     <div class="flower5 flower">
-                        <p>flower 5</p>
+                        <p class="title">flower 5</p>
                         <img src="flowers/flower5.jpg" alt="Image of a flower" class="image"/>
+                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Illo a accusamus autem laudantium quisquam laborum vel sint architecto assumenda repellendus, corporis aliquid natus dolores. Error vel corrupti quae.</p>
+                        <p>$34.99</p>
+                        <button class="button">Add to cart</button>
                     </div>
 
                     <div class="flower6 flower">
-                        <p>flower 6</p>
+                        <p class="title">flower 6</p>
                         <img src="flowers/flower6.webp" alt="Image of a flower" class="image"/>
+                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Tempore vitae adipisci ut nam enim sunt neque eius facere!</p>
+                        <p>$19.99</p>
+                        <button class="button">Add to cart</button>
                     </div>
 
                     <div class="flower7 flower">
-                        <p>flower 7</p>
+                        <p class="title">flower 7</p>
                         <img src="flowers/flower7.webp" alt="Image of a flower" class="image"/>
+                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Alias consequatur expedita quasi repellendus. Rerum!</p>
+                        <p>$49.99</p>
+                        <button class="button">Add to cart</button>
                     </div>
 
                     <div class="flower8 flower">
-                        <p>flower 8</p>
+                        <p class="title">flower 8</p>
                         <img src="flowers/flower8.jpeg" alt="Image of a flower" class="image"/>
+                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Facilis enim architecto dignissimos modi obcaecati, dolor cumque vitae aspernatur? Recusandae itaque est maxime consequatur voluptas a exercitationem nihil.</p>
+                        <p>$14.99</p>
+                        <button class="button">Add to cart</button>
                     </div>
 
                     <div class="flower9 flower">
-                        <p>flower 9</p>
+                        <p class="title">flower 9</p>
                         <img src="flowers/flower9.jpeg" alt="Image of a flower" class="image"/>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores nobis molestias omnis dolor, tempore pariatur corrupti sed.</p>
+                        <p>$39.99</p>
+                        <button class="button">Add to cart</button>
                     </div>
 
                     <div class="flower10 flower">
-                        <p>flower 10</p>
+                        <p class="title">flower 10</p>
                         <img src="flowers/flower10.jpg" alt="Image of a flower" class="image"/>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo temporibus iure quo blanditiis in delectus!</p>
+                        <p>$47.99</p>
+                        <button class="button">Add to cart</button>
                     </div>
 
                     <div class="flower11 flower">
-                        <p>flower 11</p>
+                        <p class="title">flower 11</p>
                         <img src="flowers/flower11.jpeg" alt="Image of a flower" class="image"/>
+                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Asperiores voluptatibus nisi deserunt! Rerum aut reiciendis cum ratione quaerat a vitae, voluptatem impedit fugiat expedita consequuntur, quo ab distinctio voluptate debitis.</p>
+                        <p>$18.99</p>
+                        <button class="button">Add to cart</button>
                     </div>
 
                     <div class="flower12 flower">
-                        <p>flower 12</p>
+                        <p class="title">flower 12</p>
                         <img src="flowers/flower12.jpeg" alt="Image of a flower" class="image"/>
+                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Atque est porro corrupti eligendi voluptate, aliquid saepe harum tempora accusantium ipsam vitae. Est, provident.</p>
+                        <p>$19.99</p>
+                        <button class="button">Add to cart</button>
                     </div>
             </section>
         </main>
