--- a/index.html
+++ b/index.html
@@ -19,7 +19,6 @@
                 <ul>
                     <li><a href="#landing">Home</a></li>
                     <li><a href="#flowers-container">Flowers</a></li>
-                    <li><a href="#">About Us</a></li>
                     <li><a href="#contact-me">Contact Me</a></li>
                 </ul>
             </nav>
@@ -75,7 +74,7 @@
 
                     <div class="flower6 flower">
                         <p class="flower-title">Flower 6</p>
-                        <img src="flowers/flower6.webp" alt="Image of a flower" class="image"/>
+                        <img src="flowers/newflower6.webp" alt="Image of a flower" class="image"/>
                         <p class="description">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Tempore vitae adipisci ut nam enim sunt neque eius facere!</p>
                         <p class="price">$19.99</p>
                         <button class="button">Add to cart</button>
